# northern_lights_rust

./: .clippy.toml  .editorconfig  .gitignore  Cargo.toml  README.md  docker-compose.yml  env.example  scripts.sh
.cargo-husky/hooks/: pre-commit  pre-push
migrations/: 20230412152330_create-users-table.up.sql  20230412153419_create-promo-table.down.sql  20230412153419_create-promo-table.up.sql
src/: auth.rs  db.rs  dto.rs  graceful_shutdown.rs  handler.rs  lib.rs  main.rs  models.rs  router.rs
src/config/: mod.rs
src/repo/: mock.rs  mod.rs  postgres.rs
src/repository/: mock.rs  mod.rs  models.rs
src/repository/implementations/: mock.rs  mod.rs
src/repository/implementations/postgr/: mod.rs
src/repository/postgr/: mod.rs
src/system_models/: api_response.rs  errors.rs  mod.rs  response.rs  scenario_status.rs
static/: check.html  promo.html  users.html
tests/: bips.rs  workflow.rs
