[package]
name = "promo_codes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
axum = "^0.7.9"
axum-extra = { version = "0.9.6", features = ["cookie"] }
chrono = { version = "^0.4.38", features = ["serde"] }
lazy_static = "^1.5.0"
rand = "^0.8.5"
regex = "^1.11.1"
serde = { version = "^1.0.215", features = ["derive"] }
serde_json = "^1.0.133"
sqlx = { version = "^0.8.2", features = ["runtime-tokio-native-tls", "postgres", "chrono"], optional = true }
tokio = { version = "^1.42.0", features = ["full"] }
tower-http = { version = "^0.6.2", features = ["fs", "trace"] }

[features]
default = ["mock"]
mock = []
postgres = ["sqlx"]

[dev-dependencies]
cargo-husky = { version = "^1.5.0", default-features = false, features = ["user-hooks"] }

[lints.clippy]
needless_return = "allow"
