[package]
name = "promo_codes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
chrono = { version = "0.4.39", features = ["serde"] }
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["stream"], optional = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"], optional = true }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["futures-io"], optional = true }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }

[features]
default = ["mock"]
mock = []
postgres = ["sqlx"]
stream = ["reqwest", "tokio-util"]

[dev-dependencies]
axum-test = "17.1.0"
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }

[lints.clippy]
needless_return = "allow"
